--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
 </head>
 
 <body>
-   <a href="country_wise.html"><button>Country Wise</button></a>
-   <a href="date_wise.html"><button>Date Wise</button></a>
-   <a href="browser_wise.html"><button>Browser Wise</button></a>
-
+   <div>
+      <a href="country_wise.html"><button>Country Wise</button></a>
+      <a href="date_wise.html"><button>Date Wise</button></a>
+      <a href="os_wise.html"><button>Browser Wise</button></a>
+   </div>
 </body>
 
 </html>
