--- a/country_wise.html
+++ b/country_wise.html
@@ -5,7 +5,7 @@
    <meta charset="UTF-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>Document</title>
+   <title>Country Wise IP Address</title>
 </head>
 
 <body>
@@ -76,7 +76,9 @@
    <script type="text/javascript">
 
    </script>
-   <div id="regions_div"></div>
+   <center>
+      <div id="regions_div"></div>
+   </center>
 </body>
 
 </html>
